Image import working using external api and call to catalog
