# anchore_engine/services/apiext/api/controllers/images.py
@@ -735,8 +735,14 @@ def add_image(image, force=False, autosubscribe=False):
 
         source = normalized['source']
 
-        return_object = analyze_image(ApiRequestContextProxy.namespace(), source, force, enable_subscriptions, image.get('annotations'))
-        httpcode = 200
+        if source.get('import'):
+            client = internal_client_for(CatalogClient, userId=ApiRequestContextProxy.namespace())
+            return_object = client.import_image(source.get('import'))
+            httpcode = 200
+        else:
+            return_object = analyze_image(ApiRequestContextProxy.namespace(), source, force, enable_subscriptions, image.get('annotations'))
+            httpcode = 200
+
     except api_exceptions.AnchoreApiError as err:
         raise err
         # httpcode = err.__response_code__
